--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "example_package_ishwest"
-version = "0.0.2"
+version = "0.0.3"
 authors = [
   { name="Ish West", email="no@ema.il" },
 ]
@@ -15,6 +15,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    'requests >= 2.20.0, < 3',
 ]
 
 [project.urls]
